WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197255
REGRESSION (
r242132
): Nested position:sticky elements move incorrectly
https://bugs.webkit.org/show_bug.cgi?id=197255
Summary
REGRESSION (r242132): Nested position:sticky elements move incorrectly
Simon Fraser (smfr)
Reported
2019-04-24 16:09:51 PDT
Nested position:sticky elements move incorrectly
Attachments
Patch
(5.88 KB, patch)
2019-04-24 16:11 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-04-24 16:11:52 PDT
Created
attachment 368195
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-04-24 16:11:54 PDT
<
rdar://problem/50137744
>
WebKit Commit Bot
Comment 3
2019-04-24 17:46:28 PDT
Comment on
attachment 368195
[details]
Patch Clearing flags on attachment: 368195 Committed
r244630
: <
https://trac.webkit.org/changeset/244630
>
WebKit Commit Bot
Comment 4
2019-04-24 17:46:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug