REGRESSION (r242132): Nested position:sticky elements move incorrectly https://bugs.webkit.org/show_bug.cgi?id=197255 rdar://problem/50137744

Reviewed by Zalan Bujtas.
Source/WebCore:

Revert to the behavior of the code before r242132, where we looked at the direct parent
scrolling tree node instead of walking up the ancestor chain to find an enclosing scrolling node.
This fixes nested sticky behavior.

Test: scrollingcoordinator/mac/nested-sticky.html

* page/scrolling/cocoa/ScrollingTreeStickyNode.mm:
(WebCore::ScrollingTreeStickyNode::applyLayerPositions):

LayoutTests:

* scrollingcoordinator/mac/nested-sticky-expected.html: Added.
* scrollingcoordinator/mac/nested-sticky.html: Added.


Canonical link: https://commits.webkit.org/211474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244630 268f45cc-cd09-0410-ab3c-d52691b4dbfc